--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1>Pixel Art Maker</h1>
+    <div id= "currentColor">
+
+        <p>Current Color: </p>
+
+    </div>
       <div id= "grid"></div>
 
 
